--- a/Login/recover_password.css
+++ b/Login/recover_password.css
@@ -48,25 +48,29 @@ body {
 }
 
 .form-box h2 {
-    margin-top: 0;
+    margin-top: 20px;
     font-weight: 500;
     border-bottom: 1px solid #ddd;
 }
+.form-box p {
+    margin-top: 30px;
+    color: #666;
 
+}
 .email-input {
     width: 100%;
+    margin-top: 20px;
     padding: 10px;
     border: 1px solid #bbb;
     border-radius: 4px;
-    margin-top: 5px;
 }
 
-.captcha-box {
+/* .captcha-box {
     border: 1px solid #bbb;
     padding: 10px;
     margin-top: 15px;
     border-radius: 4px;
-}
+} */
 
 /* Links */
 .links {
