--- a/style/header/header.css
+++ b/style/header/header.css
@@ -30,6 +30,8 @@ body { padding-top: 72px; margin: 0; font-family: Arial, sans-serif; }
 
 /* --- logo --- */
 .logo {
+    right: 50px;
+    position: relative;
     font-size: 45px;
     font-weight: 800;
     color: #fff;
@@ -47,7 +49,7 @@ body { padding-top: 72px; margin: 0; font-family: Arial, sans-serif; }
 .searchbar {
     display: flex;
     position: relative;
-    left: 113px;
+    left: 80px;
     align-items: center;
     background: #fff;
     border-radius: 6px;
@@ -85,7 +87,7 @@ body { padding-top: 72px; margin: 0; font-family: Arial, sans-serif; }
 .header-right {
     display: flex;
     position: relative;
-    right: 8px;
+    right: 6px;
     align-items: center;
     gap: 10px;
 }
