--- a/User/Address/address.css
+++ b/User/Address/address.css
@@ -1,69 +1,23 @@
 body {
+    background-color: #f8f8f8;
     margin: 0;
-    font-family: Arial, sans-serif;
-    background: #f8f9fa;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', Arial, sans-serif;
 }
 
 /* MAIN LAYOUT */
 .container {
+    /* display: flex;
+    padding: 20px 60px; */
     display: flex;
-    padding: 20px 60px;
-}
-
-/* SIDEBAR */
-.sidebar {
-    width: 230px;
-    background: #fff;
-    border: 1px solid #e0e0e0;
-    border-radius: 6px;
-    padding: 20px 0;
-    margin-right: 30px;
-    height: fit-content;
-}
-
-.user-info {
-    text-align: center;
-    margin-bottom: 15px;
-}
-
-.avatar {
-    background: #d9232d;
-    color: white;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    line-height: 60px;
-    font-size: 24px;
-    margin: 0 auto;
-}
-
-.username {
-    font-weight: bold;
-    margin-top: 8px;
-}
-
-.menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.menu li {
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.menu li:hover {
-    background: #f2f2f2;
-}
-
-.menu li.active {
-    color: #d9232d;
-    font-weight: bold;
+    width: 100%;
+    min-height: calc(100vh - 70px);
+    gap: 15px;
+    padding: 0 140px;
+    padding-top: 35px;
+    padding-bottom: 8px;
+    background-color: #f8f8f8;
 }
 
 /* CONTENT */
