--- a/User/User_sidebar/user_sidebar.css
+++ b/User/User_sidebar/user_sidebar.css
@@ -56,3 +56,37 @@
     color: #d32f2f;
     transform: translateX(5px);
 }
+
+.menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    text-decoration: none;
+    color: #333;
+    width: 100%;
+}
+
+.menu li:hover a {
+    color: #d32f2f;
+}
+
+.menu li.active a {
+    color: #d32f2f !important;
+    font-weight: 600;
+}
+
+.menu li.active {
+    background-color: #fce7e7;
+}
+
+
+/* .menu li {
+    padding: 12px 25px;
+    transition: 0.2s;
+    cursor: pointer;
+} */
+
+/* .menu li:hover {
+    background-color: #f3f3f3;
+    transform: translateX(5px);
+} */
