--- a/Checkout/checkout.css
+++ b/Checkout/checkout.css
@@ -9,6 +9,7 @@ body {
 /* Layout */
 .container {
     display: flex;
+    margin-top: 50px;
     gap: 10px;
     padding: 0 140px;
     align-items: flex-start;
