--- a/src/main/webapp/Home/Category/Categories.css
+++ b/src/main/webapp/Home/Category/Categories.css
@@ -5,8 +5,13 @@
     border: 1px solid #e9edf2;
     border-radius: 6px;
     padding: 12px 12px 18px;
+    background: rgb(247 248 249);
 }
-
+.dm-container{
+    margin-top:10px;
+    background: white;
+    padding: 20px;
+}
 /* Header chính */
 .dm-head {
     display: flex;
@@ -21,6 +26,8 @@
     margin: 0;
     padding-left: 10px;
     border-left: 4px solid #1e9bff;
+    padding: 5px;
+    background: orange;
     /* vạch xanh bên trái giống hình */
 }
 
@@ -39,7 +46,6 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     /* 6 cột desktop */
-    border: 1px solid #eef2f6;
     border-radius: 6px;
 }
 
@@ -48,14 +54,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+
+    margin:5px;
     text-decoration: none;
     color: #333;
-    padding: 16px 8px;
+    padding: 10px 4px;
     border: 1px solid #f1f4f7;
     border-radius: 6px;
     background: #fff;
     transition: transform .15s ease, box-shadow .15s ease;
+
 }
 
 .dm-cat:hover {
@@ -70,7 +78,7 @@
 }
 
 .dm-cat span {
-    font-size: 14px;
+    font-size: 10px;
     color: #4a4a4a;
 }
 
